--- a/app/index.html
+++ b/app/index.html
@@ -343,14 +343,14 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.bootstrap.js"></script>
-    <script src="scripts/app.js"></script>
-    <script src="scripts/app.routes.js"></script>
-    <script src="scripts/apprun.js"></script>
+    <script src="app.bootstrap.js"></script>
+    <script src="app.module.js"></script>
+    <script src="app.routes.js"></script>
+    <script src="app.run.js"></script>
     <!--controllers-->
-    <script src="controllers/gradient.controller.js"></script>
-    <script src="controllers/main.controller.js"></script>
-    <script src="controllers/popup.controller.js"></script>
+    <script src="components/gradients/gradient.controller.js"></script>
+    <script src="components/core/main.controller.js"></script>
+    <script src="components/core/popup.controller.js"></script>
     <!--common directives-->
     <script src="directives/directives.js"></script>
     <script src="directives/footer.directive.js"></script>
