Open Shift ping

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         init-app
         data-spy="scroll"
         data-target=".navbar-custom"
-        data-offset="70">
+        data-offset="50">
     <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
 	your browser</a> to improve your experience.</p>
@@ -353,6 +353,7 @@
     <script src="components/core/popup/popup.js"></script>
     <script src="components/core/popup/popup.controller.js"></script>
     <script src="components/core/popup/modal.service.js"></script>
+    <script src="components/core/wakeopenshift.service.js"></script>
     <!--gradient components -->
     <script src="components/gradients/gradients.js"></script>
     <script src="components/gradients/gradient.controller.js"></script>
