--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,9 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<!-- build:css(.) styles/vendor.css -->
 	<!-- bower:css -->
-	<link rel="stylesheet" href="bower_components/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css"/>
-	<link rel="stylesheet" href="bower_components/animate.css/animate.css"/>
-	<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css"/>
+	<link rel="stylesheet" href="bower_components/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css" />
+	<link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+	<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- Latest compiled and minified CSS -->
@@ -202,7 +202,7 @@
 						<div class="grid wow zoomIn">
 							<a href="http://www.joinexperience.com" target="_blank">
 								<figure class="effect-bubba">
-									<img src="styles/images/join.jpg">
+									<img src="../styles/unversioned/join.jpg">
 									<figcaption>
 										<h2>JoinExperience</h2>
 										<span>European telco operator</span>
@@ -213,10 +213,10 @@
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
 						<div class="grid wow zoomIn">
-							<a href="http://insider.thomsonreuters.com">
+							<a href="http://insider.thomsonreuters.com" target="_blank">
 								<figure class="effect-bubba">
 									<div class="img-holder">
-										<img src="styles/images/insider.png">
+										<img src="../styles/unversioned/insider.png">
 									</div>
 									<figcaption>
 										<h2>Reuters insider</h2>
