Add another project

--- a/app/index.html
+++ b/app/index.html
@@ -228,11 +228,15 @@
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
 						<div class="grid wow zoomIn">
-							<figure class="effect-bubba">
-								<figcaption>
-									<h2>Project 3</h2>
-								</figcaption>
-							</figure>
+							<a href="http://developer.edmunds.com" target="_blank">
+								<figure class="effect-bubba">
+									<img src="../styles/unversioned/edmunds.png">
+									<figcaption>
+										<h2>Edmunds API Portal</h2>
+										<span>Developer's portal</span>
+									</figcaption>
+								</figure>
+							</a>
 						</div>
 					</div>
 				</div>
